# cakar-tr069-cpe

./: .gitignore  CMakeLists.txt  active.h  cakar-cpe.c  cakar-cpe.sln  cakar-cpe.vcxproj  cakar-cpe.vcxproj.filters  common.c  common.h  connection.c  connection.h  connection_win32.c  datamodel.c  datamodel.h  http_connection_request.c  http_connection_request.h  http_generator.c  http_generator.h  http_parser.c  http_parser.h  inform.c  inform.h  inform_queue.c  inform_queue.h  xml_generator.c  xml_generator.h  xml_inform_generator.c  xml_inform_generator.h  xml_parser.c  xml_parser.h
unit_tests/: GetParameterNames.xml  a.out  xml_parser_test.c
